--- a/home.html
+++ b/home.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link href="StyleSheet.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 
 </head>
 <body>
@@ -19,7 +22,7 @@
                 </div>
                 <ul class="menu-list">
                     <div class="icon cancel-btn">
-                    <i class="fas fa-times"></i>
+                        <i class="fas fa-times"></i>
                     </div>
                     <li>  <a class="active" href="home.html">Home</a> </li>
                     <li>   <a href="aboutus.html">About Us</a></li>
@@ -66,5 +69,8 @@
         </div>
      
     </footer>
+    <script src="JavaScript.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
