--- a/menus.html
+++ b/menus.html
@@ -10,23 +10,32 @@
     <script src="JavaScript.js"></script>
 </head>
 <body>
-    <section id="page">
-        <header>
-            <h1>Menu and Gallery</h1>
-            <img src="companylogo.PNG" />
-            <div></div>
-        </header>
-        <nav>
-            <ul id="menu">
-                <li>  <a href="home.html">Home</a> </li>
-                <li>   <a href="aboutus.html">About Us</a></li>
-                <li> <a href="booking.html">Reservations</a></li>
-                <li> <a href="order.html">Online Orders</a></li>
-                <li>  <a class="active" href="menus.html">Menus</a></li>
-                <li>   <a href="contactus.html">Contact Us</a></li>
-            </ul>
+    <section>
+        <nav class="navbar">
+            <div class="content">
+                <div class="logo">
+                    <a href="home.html">
+                        <img src="Images/Home/cutlery.png" alt="Logo" width="100px" />
+                    </a>
+                </div>
+                <ul class="menu-list">
+                    <div class="icon cancel-btn">
+                        <i class="fas fa-times"></i>
+                    </div>
+                    <li>  <a class="active" href="home.html">Home</a> </li>
+                    <li>   <a href="aboutus.html">About Us</a></li>
+                    <li> <a href="booking.html">Reservations</a></li>
+                    <li> <a href="order.html">Online Orders</a></li>
+                    <li>  <a href="menus.html">Menus</a></li>
+                    <li>   <a href="contactus.html">Contact Us</a></li>
+                </ul>
+                <div class="icon menu-btn">
+                    <i class="fas fa-bars"></i>
+                </div>
+            </div>              
         </nav>
-
+    </section>
+    <section id="page">>
         <article id="flexItem3">
             <h2>Menu </h2>
             <ul>
