--- a/menus.html
+++ b/menus.html
@@ -35,14 +35,10 @@
             </div>              
         </nav>
     </section>
-    <section id="page">>
+    <section id="page" class="page-set">
         <article id="flexItem3">
             <h2>Menu </h2>
-            <ul>
-                <li><a href="Images/menu.pdf" download="Menu" class="tooltip">View our menu<span class="tooltiptext">Click to download the menu as a PDF</span></a></li>
-            </ul>
         </article>
-        <br />
         <br />
         <br />
         <section>
