--- a/order.html
+++ b/order.html
@@ -35,7 +35,7 @@
             </div>              
         </nav>
     </section>
-    <section id="page">
+    <section id="page" class="page-set">
         <div class="container">
             <div>
             <h2>Menu</h2>
