--- a/contactus.html
+++ b/contactus.html
@@ -36,6 +36,9 @@
         </nav>
     </section>
     <section id="page">
+        <article id="flexItem3">
+            <h2>Contact Us </h2>
+        </article>
         <h2>
             Fill in the form below and we will get back to you as soon as possible.
             Alternatively use the contact details provided:
