--- a/menus.html
+++ b/menus.html
@@ -36,25 +36,201 @@
             </div>              
         </nav>
     </section>
+
+    <section class="section menu" aria-label="menu-label" id="menu">
+        <div class="container">
+            <h2>Specials</h2>
+          <ul class="grid-list">
+
+            <li>
+              <div class="menu-card hover:card">
+
+                <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
+                  <img src="Images/Menu/food7.jpg" width="100" height="100"
+                    class="img-cover">
+                </figure>
+
+                <div>
+
+                  <div class="title-wrapper">
+                    <h3 class="title-3">
+                      <h1>Burger and Chips</h1>
+                    </h3>
+
+                    <span class="span title-2">R25.50</span>
+                  </div>
+
+                  <p class="card-text label-1">
+                    Tomatoes, Chips, sliced cucumber onion, olives, and feta cheese.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="menu-card hover:card">
+
+                <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
+                  <img src="Images/Menu/food3.jpg" width="100" height="100"
+                    class="img-cover">
+                </figure>
+
+                <div>
+
+                  <div class="title-wrapper">
+                    <h3 class="title-3">
+                      <h1>Lasagne</h1>
+                    </h3>
+
+                    <span class="span title-2">R40.00</span>
+                  </div>
+
+                  <p class="card-text label-1">
+                    Vegetables, cheeses, pork
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="menu-card hover:card">
+
+                <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
+                  <img src="Images/Menu/food2.jpg" width="100" height="100"
+                    class="img-cover">
+                </figure>
+
+                <div>
+
+                  <div class="title-wrapper">
+                    <h3 class="title-3">
+                      <h1>Butternut Pumpkin</h1>
+                    </h3>
+
+                    <span class="span title-2">R10.00</span>
+                  </div>
+
+                  <p class="card-text label-1">ground meet
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="menu-card hover:card">
+
+                <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
+                  <img src="Images/Menu/food1.jpg" width="100" height="100"
+                    class="img-cover">
+                </figure>
+
+                <div>
+
+                  <div class="title-wrapper">
+                    <h3 class="title-3">
+                      <h1>Tokusen Wagyu</h1>
+                    </h3>
+
+                    <span class="span title-2">R39.00</span>
+                  </div>
+
+                  <p class="card-text label-1">
+                    fish, cheeses, tomato sauce, seasonings and spices.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="menu-card hover:card">
+
+                <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
+                  <img src="Images/Menu/contactus2.jpg" width="100" height="100"
+                    class="img-cover">
+                </figure>
+
+                <div>
+
+                  <div class="title-wrapper">
+                    <h3 class="title-3">
+                      <h1>Olivas Rellenas</h1>
+                    </h3>
+
+                    <span class="span title-2">R25.00</span>
+                  </div>
+
+                  <p class="card-text label-1">
+                    Avocados with crab meat, red onion, crab salad stuffed red bell pepper and green bell pepper.
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+            <li>
+              <div class="menu-card hover:card">
+
+                <figure class="card-banner img-holder" style="--width: 100; --height: 100;">
+                  <img src="Images/Menu/burger.jpg" width="100" height="100"
+                    class="img-cover">
+                </figure>
+
+                <div>
+
+                  <div class="title-wrapper">
+                    <h3 class="title-3">
+                      <h1>Burger</h1>
+                    </h3>
+
+                    <span class="span title-2">R49.00</span>
+                  </div>
+
+                  <p class="card-text label-1">
+                    Rolls, cheeses, ground meats, tomato sauce, lettuce and tomato
+                  </p>
+
+                </div>
+
+              </div>
+            </li>
+
+          </ul>
+        </div>
+      </section>
+
+
     <section id="page" class="page-set">
         <article id="flexItem3">
-            <h2>Menu </h2>
+            <!-- <h2>Menu </h2> -->
         </article>
         <br />
         <br />
         <section>
             <h2>Gallery</h2>
             <div class="image-grid">
-               <img src="Images/order1.jpg" alt="Gallery Image 1">
-               <img src="Images/order2.jpg" alt="Gallery Image 2">
-               <img src="Images/order3.jpg" alt="Gallery Image 3">
-               <img src="Images/order4.jpg" alt="Gallery Image 4">
-               <img src="Images/order5.jpg" alt="Gallery Image 5">
+               <img src="Images/food9.jpg" alt="Gallery Image 1">
+               <img src="Images/hotdog.jpg" alt="Gallery Image 2">
+               <img src="Images/food7.jpg" alt="Gallery Image 3">
+               <img src="Images/food1.jpg" alt="Gallery Image 4">
+               <img src="Images/food6.jpg" alt="Gallery Image 5">
                <img src="Images/order6.jpg" alt="Gallery Image 6">
-              <img src="Images/order9.jpg" alt="Gallery Image 7">
+               <img src="Images/order9.jpg" alt="Gallery Image 7">
+               <img src="Images/order8.jpg" alt="Gallery Image 8">
                <img src="Images/order8.jpg" alt="Gallery Image 8">
             </div>
         </section>
+        
+        </section>
+
         <footer class="footer">
             <div class="footer-container">
 
@@ -77,7 +253,7 @@
             </div>
 
         </footer>
-        </section>
+
         <script src="JavaScript.js"></script>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
