--- a/booking.html
+++ b/booking.html
@@ -36,46 +36,43 @@
             </div>              
         </nav>
     </section>
-    <section id="page">
-        <section id="booking-form">
-            <form action="mailto:nidiamarirer@gmail.com">
-                <p>******************************</p>
-                <fieldset id="booking-information">
-
-                    <legend>Booking Information</legend>
-                    <p>*********************************</p>
-                    <label for="date">Date:</label>
-                    <input type="date" id="date" name="date" required min="<?php echo date('Y-m-d'); ?>">
-                    <label for="time">Time:</label>
-                    <input type="time" id="time" name="time"><br><br>
-                    <label for="party-size">Number of Guests:</label>
-                    <select id="party-size" name="party-size" required>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                    </select><br><br>
-                    <label for="special-requests">Special Requests:</label>
-                    <textarea id="special-requests" name="special-requests"></textarea><br><br>
-                </fieldset>
-                <p>*****************************************************************</p>
-                <fieldset id="personal-details">
-
-                    <legend>Personal Details</legend>
-                    <p>*****************************************************************</p>
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required><br><br>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required><br><br>
-                    <label for="phone">Phone:</label>
-                    <input type="tel" id="phone" name="phone" required><br><br>
-                </fieldset>
-                <button type="reset" onclick="clearForm()">Clear Form</button>
-                <button type="submit" onclick="makeReservation"> Make Reservation</button>
-
-            </form>
+    <section id="page" class="page-set change-c">
+        <div class="content">
+            <section id="booking-form" >
+                <form action="mailto:nidiamarirer@gmail.com">
+                    <fieldset id="booking-information">
+                        <legend>Booking Information</legend>
+                        <label for="date">Date:</label>
+                        <input type="date" id="date" name="date" required min="<?php echo date('Y-m-d'); ?>">
+                        <label for="time">Time:</label>
+                        <input type="time" id="time" name="time"><br><br>
+                        <label for="party-size">Number of Guests:</label>
+                        <select id="party-size" name="party-size" required>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select><br><br>
+                        <label for="special-requests">Special Requests:</label>
+                        <textarea id="special-requests" name="special-requests"></textarea><br><br>
+                    </fieldset>
+                    <fieldset id="personal-details">
+    
+                        <legend>Personal Details</legend>
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="name" required><br><br>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required><br><br>
+                        <label for="phone">Phone:</label>
+                        <input type="tel" id="phone" name="phone" required><br><br>
+                    </fieldset>
+                    <button type="reset" onclick="clearForm()">Clear Form</button>
+                    <button type="submit" onclick="makeReservation"> Make Reservation</button>
+    
+                </form>
         </section>
+        </div>
 
         <footer class="footer">
             <div class="footer-container">
