--- a/contactus.html
+++ b/contactus.html
@@ -36,45 +36,47 @@
             </div>              
         </nav>
     </section>
-    <section id="page">
+    <section id="page" class="page-set">
         <article id="flexItem3">
             <h2>Contact Us </h2>
         </article>
-        <h2>
-            Fill in the form below and we will get back to you as soon as possible.
-            Alternatively use the contact details provided:
-        </h2>
-
-        <form id="contactsForm">
-            <fieldset>
-                <legend>Contact Us</legend>
-                <p>
-                    <label for="firstName">First name: </label>
-                    <input type="text" id="firstName" name="firstName" required>
-                </p>
-                <p>
-                    <label for="email">Email Address: </label>
-                    <input type="email" id="emailAddress" name="emailAddress" required>
-                </p>
-                <p>
-                    <label for="phoneNumber">Phone Number: </label>
-                    <input type="tel" id="phoneNumber" name="phoneNumber" required>
-                </p>
-                <p>
-                    <label for="contactMethod">Preferred contact method:</label>
-                    <label><input type="radio" name="contactMethod" value="email" required> Email</label>
-                    <label><input type="radio" name="contactMethod" value="call" required> Call</label>
-                <p>
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message" rows="4" required></textarea>
-                </p>
-                <p>
-                    <button type="submit"> Submit </button>
-                    <button type="reset">Reset form</button>
-                </p>
-            </fieldset>
-        </form>
-
+        <div class="content">       
+            <h2>
+                Fill in the form below and we will get back to you as soon as possible.
+                Alternatively use the contact details provided:
+            </h2>
+    
+            <form id="contactsForm">
+                <fieldset>
+                    <legend>Contact Us</legend>
+                    <p>
+                        <label for="firstName">First name: </label>
+                        <input type="text" id="firstName" name="firstName" required>
+                    </p>
+                    <p>
+                        <label for="email">Email Address: </label>
+                        <input type="email" id="emailAddress" name="emailAddress" required>
+                    </p>
+                    <p>
+                        <label for="phoneNumber">Phone Number: </label>
+                        <input type="tel" id="phoneNumber" name="phoneNumber" required>
+                    </p>
+                    <p>
+                        <label for="contactMethod">Preferred contact method:</label>
+                        <label><input type="radio" name="contactMethod" value="email" required> Email</label>
+                        <label><input type="radio" name="contactMethod" value="call" required> Call</label>
+                    <p>
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" rows="4" required></textarea>
+                    </p>
+                    <p>
+                        <button type="submit"> Submit </button>
+                        <button type="reset">Reset form</button>
+                    </p>
+                </fieldset>
+            </form>
+    
+        </div>
         <footer class="footer">
             <div class="footer-container">
 
